--- a/src/main/resources/public/template/token/tokenList.html
+++ b/src/main/resources/public/template/token/tokenList.html
@@ -3,41 +3,42 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head></head>
 <body>
-    <div class="no-data-found no-data-found" th:if="${#lists.isEmpty(tokenList)}">
-        <img class="no-data-icon"/>
+<div class="card-list flex-row justify-content-start align-itmes-start">
+    <input th:type="hidden" id="totalCount" th:value="${tokenCount}"/>
+    <div class="card flex-row justify-content-center no-data-found" th:if="${#arrays.isEmpty(tokenList)}">
+        <img class="no-data-icon" />
         <span class="no-data-text" th:text="#{common.msg.noData}"></span>
     </div>
-    <div class="list-item flex-row" th:each="token: ${tokenList}">
+    <div class="card flex-row" th:unless="${#arrays.isEmpty(tokenList)}" th:each="token: ${tokenList}"
+         sec:authorize="hasAuthority('token.read')" th:onclick="openTokenEdit([[${token.tokenId}]])">
         <div class="document-color" th:style="|background-color: ${token.documentColor}|"></div>
-        <div class="document-row flex-row justify-content-between">
+        <div class="document-row flex-fill flex-row justify-content-between">
             <div class="document-row-content">
-                <span sec:authorize="hasAuthority('token.read')" th:onclick="openTokenEdit([[${token.tokenId}]])">
-                    <div class="document-title flex-row align-items-center">
-                        <h3 th:text="${token.documentName}" class="text-ellipsis"></h3>
-                        <span th:text="${token.documentNo}" class="document-numbering text-ellipsis"></span>
-                    </div>
-                    <div class="document-topic">
-                        <h5 class="document-topic-item" th:each="topic: ${token.topics}" th:text="${topic}"></h5>
-                    </div>
-                </span>
+                <div class="document-title flex-row align-items-center">
+                    <h3 th:text="${token.documentName}" class="mr-2 text-ellipsis"></h3>
+                    <span th:text="${token.documentNo}" class="document-numbering text-ellipsis"></span>
+                </div>
+                <div class="document-topic">
+                    <label class="topic" th:each="topic: ${token.topics}" th:text="${topic}"></label>
+                </div>
             </div>
             <div class="document-row-info">
                 <div class="document-detail flex-row align-items-center float-right">
                     <div class="document-user inline-flex align-items-center justify-content-center">
                         <img class="profile-photo mr-2" alt="profile pic" th:src="${token.avatarPath}" width="32" height="32">
-                        <h5 class="user-name" th:text="${token.createUserName}"></h5>
+                        <span class="user-name" th:text="${token.createUserName}"></span>
                     </div>
                     <span class="vertical-bar"></span>
-                    <h5 th:text="${token.createDt}" class="create-dt"></h5>
+                    <span class="create-dt" th:text="${token.createDt}"></span>
                     <span class="vertical-bar"></span>
-                    <h5 th:text="${token.elementName}"></h5>
+                    <span class="element-name" th:text="${token.elementName}"></span>
                 </div>
                 <div class="document-tag">
-                    <span class="document-tag-item align-center" th:each="tag: ${token.tags}" th:text="${tag}"></span>
+                    <span class="tag align-center text-ellipsis" th:each="tag: ${token.tags}" th:text="${tag}"></span>
                 </div>
             </div>
         </div>
     </div>
-    <input th:type="hidden" id="totalCount" th:value="${tokenCount}"/>
+</div>
 </body>
 </html>
