--- a/src/main/resources/public/template/workflow/workFlowEdit.html
+++ b/src/main/resources/public/template/workflow/workFlowEdit.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
     <!-- 업무흐름 모달 -->
-    <div class="document-content">
+    <div class="workflow-content">
         <div class="flex-column">
             <!-- 업무흐름 구분 -->
             <label class="field-label" for="document-type">
