--- a/src/main/resources/public/template/workflow/workFlowSearch.html
+++ b/src/main/resources/public/template/workflow/workFlowSearch.html
@@ -248,7 +248,7 @@
                             }
 
                             // 스크롤바 추가
-                            OverlayScrollbars(document.querySelector('.document-content'), {className: 'scrollbar'});
+                            OverlayScrollbars(document.querySelector('.workflow-content'), {className: 'scrollbar'});
                             OverlayScrollbars(document.querySelector('.textarea-scroll-wrapper'), {
                                 className: 'inner-scrollbar',
                                 resize: 'vertical',
