--- a/src/main/resources/public/template/dashboard/dashboardView.html
+++ b/src/main/resources/public/template/dashboard/dashboardView.html
@@ -7,41 +7,41 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="contents-token flex-column dashboard">
-        <div id="search-main" class="header dashboard">
-            <div class="page-title">
-                <h1 th:text="#{dashboard.label.dashboard}"></h1>
-                <h6 class="title-description" th:text="#{dashboard.msg.viewDescription}"></h6>
-            </div>
+    <div class="dashboard-header">
+        <div class="header-title flex-row align-items-baseline">
+            <h1 th:text="#{token.label.list}"></h1>
+            <h6 class="description" th:text="#{dashboard.msg.viewDescription}"></h6>
         </div>
-        <div class="sub-title">업무통계</div>
-        <div id="statistic" class="dashboard-statistic justify-content-between">
-            <div class="statistic-box">
+    </div>
+    <div class="dashboard-content flex-fill">
+        <h3 class="sub-title">업무통계</h3>
+        <div id="statistic" class="flex-row">
+            <div class="statistic-box flex-row align-items-center mr-4">
                 <img th:src="@{/assets/theme/{theme}/media/images/dashboard/img_dashboard_document.png(theme=${#authentication.details.theme})}">
                 <div class="statistic-info">
-                    <span class="statistic-count">1</span>
-                    <span class=""statistic-type>처리할 문서</span>
+                    <h3 class="statistic-count flex-row">1</h3>
+                    <span class="statistic-type">처리할 문서</span>
                 </div>
             </div>
-            <div class="statistic-box">
+            <div class="statistic-box flex-row align-items-center mr-4">
                 <img th:src="@{/assets/theme/{theme}/media/images/dashboard/img_dashboard_daily.png(theme=${#authentication.details.theme})}">
                 <div class="statistic-info">
-                    <span class="statistic-count">0(3)</span>
-                    <span class=""statistic-type>오늘</span>
+                    <h3 class="statistic-count flex-row">0(3)</h3>
+                    <span class="statistic-type">오늘</span>
                 </div>
             </div>
-            <div class="statistic-box">
+            <div class="statistic-box flex-row align-items-center mr-4">
                 <img th:src="@{/assets/theme/{theme}/media/images/dashboard/img_dashboard_weekly.png(theme=${#authentication.details.theme})}">
                 <div class="statistic-info">
-                    <span class="statistic-count">4(5)</span>
-                    <span class=""statistic-type>이번 주</span>
+                    <h3 class="statistic-count flex-row">4(5)</h3>
+                    <span class="statistic-type">이번 주</span>
                 </div>
             </div>
-            <div class="statistic-box">
+            <div class="statistic-box flex-row align-items-center">
                 <img th:src="@{/assets/theme/{theme}/media/images/dashboard/img_dashboard_monthly.png(theme=${#authentication.details.theme})}">
                 <div class="statistic-info">
-                    <span class="statistic-count">11(12)</span>
-                    <span class=""statistic-type>이번 달</span>
+                    <h3 class="statistic-count flex-row">11(12)</h3>
+                    <span class="statistic-type">이번 달</span>
                 </div>
             </div>
         </div>
@@ -54,9 +54,9 @@
             <input type="hidden" id="searchToDt" name="searchToDt" class="search-date" />
             <input type="hidden" id="searchTags" name="searchTags" value="" />
         </form>
-        <div class="sub-title">처리할 문서</div>
-        <div class="scroll-wrap list flex-column">
-            <div class="list flex-column" id="tokenList"></div>
+        <h3 class="sub-title">처리할 문서</h3>
+        <div class="scroll-wrap">
+            <div id="tokenList"></div>
         </div>
     </div>
 </th:block>
@@ -68,7 +68,7 @@
             document.getElementById('searchFromDt').value = i18n.getDate({'months': -3});
             document.getElementById('toDt').value = i18n.getDate();
 
-/*            aliceJs.sendXhr({
+            /*aliceJs.sendXhr({
                 method: 'GET',
                 url: '/dashboard/statistic',
                 callbackFunc: function (response) {
@@ -121,7 +121,7 @@
                             tokenCreateDt.title = i18n.userDateTime(tokenCreateDt.textContent.trim());
                             tokenCreateDt.textContent = dateFormatFromNow(tokenCreateDt.textContent.trim());
                         });
-                        OverlayScrollbars(document.querySelector('.list'), {
+                        OverlayScrollbars(document.querySelector('.scroll-wrap'), {
                             className: 'scrollbar',
                             callbacks: {
                                 onScroll: function (e) {
@@ -143,10 +143,15 @@
         }
 
         function getDataTemplate(data) {
-            let divTokenArea = document.querySelector('.list .os-content');
+             let divList = document.querySelector('.dashboard-content .card-list');
 
-            let divListItem = document.createElement('div');
-            divListItem.className = 'list-item';
+            let divCard = document.createElement('div');
+            divCard.className = 'card flex-row';
+            divCard.addEventListener('click', function (e) {
+                if (document.getElementsByName('isRole')[0].value) {
+                    openTokenEdit(data.tokenId);
+                }
+            }, false);
 
             let divDocumentColor = document.createElement('div');
             divDocumentColor.className = 'document-color';
@@ -158,18 +163,11 @@
             let divDocumentRowContent = document.createElement('div');
             divDocumentRowContent.className = 'document-row-content';
 
-            let aOpenTokenEdit = document.createElement('span');
-            aOpenTokenEdit.addEventListener('click', function (e) {
-                if (document.getElementsByName('isRole')[0].value) {
-                    openTokenEdit(data.tokenId);
-                }
-            }, false);
-
             let divDocumentTitle = document.createElement('div');
             divDocumentTitle.className = 'document-title flex-row align-items-center';
 
             let h3DocumentName = document.createElement('h3');
-            h3DocumentName.className = 'text-ellipsis';
+            h3DocumentName.className = 'mr-2 text-ellipsis';
             h3DocumentName.innerText = data.documentName;
 
             let spanDocumentNo = document.createElement('span');
@@ -180,9 +178,9 @@
             divDocumentTopic.className = 'document-topic';
 
             for (let i = 0; i < data.topics.length; i++) {
-                let h5Topic = document.createElement('h5');
-                h5Topic.innerText = data.topics[i];
-                divDocumentTopic.appendChild(h5Topic);
+                let labelTopic = document.createElement('label');
+                labelTopic.innerText = data.topics[i];
+                divDocumentTopic.appendChild(labelTopic);
             }
 
             let divDocumentRowInfo = document.createElement('div');
@@ -201,8 +199,9 @@
             imgProfilePhoto.alt = 'profile pic';
             imgProfilePhoto.src = data.avatarPath;
 
-            let h5CreateUserName = document.createElement('h5');
-            h5CreateUserName.innerText = data.createUserName;
+            let spanCreateUserName = document.createElement('span');
+            spanCreateUserName.className = 'user-name';
+            spanCreateUserName.innerText = data.createUserName;
 
             let spanUserVerticalBar = document.createElement('span');
             spanUserVerticalBar.className = 'vertical-bar';
@@ -210,36 +209,37 @@
             let spanNameVerticalBar = document.createElement('span');
             spanNameVerticalBar.className = 'vertical-bar';
 
-            let h5CreateDt = document.createElement('h5');
-            h5CreateDt.className = 'create-dt';
-            h5CreateDt.title = i18n.userDateTime(data.createDt);
-            h5CreateDt.innerText = dateFormatFromNow(data.createDt);
+            let spanCreateDt = document.createElement('span');
+            spanCreateDt.className = 'create-dt';
+            spanCreateDt.title = i18n.userDateTime(data.createDt);
+            spanCreateDt.innerText = dateFormatFromNow(data.createDt);
 
-            let h5ElementName = document.createElement('h5');
-            h5ElementName.innerText = data.elementName;
+            let spanElementName = document.createElement('span');
+            spanElementName.className = 'element-name';
+            spanElementName.innerText = data.elementName;
 
             let documentTag = document.createElement('div');
             documentTag.className = 'document-tag';
             for (let i = 0; i < data.tags.length; i++) {
                 let spanTag = document.createElement('span');
+                spanTag.className = 'tag align-center text-ellipsis';
                 spanTag.innerText = data.tags[i];
                 documentTag.appendChild(spanTag);
             }
 
             divDocumentTitle.appendChild(h3DocumentName);
             divDocumentTitle.appendChild(spanDocumentNo);
-            aOpenTokenEdit.appendChild(divDocumentTitle);
-            aOpenTokenEdit.appendChild(divDocumentTopic);
-            divDocumentRowContent.appendChild(aOpenTokenEdit);
+            divDocumentRowContent.appendChild(divDocumentTitle);
+            divDocumentRowContent.appendChild(divDocumentTopic);
+
             divDocumentUser.appendChild(imgProfilePhoto);
-            divDocumentUser.appendChild(h5CreateDt);
-            divDocumentUser.appendChild(h5CreateUserName);
+            divDocumentUser.appendChild(spanCreateUserName);
 
             divDocumentDetail.appendChild(divDocumentUser);
             divDocumentDetail.appendChild(spanUserVerticalBar);
-            divDocumentDetail.appendChild(h5CreateDt);
+            divDocumentDetail.appendChild(spanCreateDt);
             divDocumentDetail.appendChild(spanNameVerticalBar);
-            divDocumentDetail.appendChild(h5ElementName);
+            divDocumentDetail.appendChild(spanElementName);
 
             divDocumentRowInfo.appendChild(divDocumentDetail);
             divDocumentRowInfo.appendChild(documentTag);
@@ -247,10 +247,10 @@
             divDocumentRow.appendChild(divDocumentRowContent);
             divDocumentRow.appendChild(divDocumentRowInfo);
 
-            divListItem.appendChild(divDocumentColor);
-            divListItem.appendChild(divDocumentRow);
+            divCard.appendChild(divDocumentColor);
+            divCard.appendChild(divDocumentRow);
 
-            divTokenArea.appendChild(divListItem);
+            divList.appendChild(divCard);
         }
 
         /**
