--- a/src/main/resources/public/src/scss/theme/default/_variables.scss
+++ b/src/main/resources/public/src/scss/theme/default/_variables.scss
@@ -174,3 +174,7 @@ $document-card-hover-border:                  $document-card-radius solid $line-
 $vertical-bar-width:                          1.25rem; // 20px
 $vertical-bar-height:                         1.25rem; // 20px
 $vertical-bar-margin:                         0.0625rem 0.9375rem 0.0625rem 0; // 1px 5px 1px 0
+
+//////////////////////////// tag //////////////////////////////
+$tag-font-color:                             rgba(0, 152, 255, 0.7); // $point-blue , 불투명도 70
+$tag-bg-color:                               rgba(0, 152, 255, 0.1); // $point-blue , 불투명도 10
