#9645 [단위 테스트 - 문서양식] IMPORT 모달에서 '첨부파일'의 font-weight가 다릅니다.

--- a/src/main/resources/public/src/scss/template/_variables.scss
+++ b/src/main/resources/public/src/scss/template/_variables.scss
@@ -213,7 +213,7 @@ $column-12: $column-init * 12; // 960px
 //////////////////////////////// fileuploader ////////////////////////////////
 $file-uploader-font-size:                    $font-size-base;
 $file-uploader-font-color:                   $dark-gray;
-$file-uploader-font-weight:                  $font-weight-regular;
+$file-uploader-font-weight:                  $font-weight-medium;
 // drag and drop 영역
 $dropzone-font-size:                         $font-size-base;
 $dropzone-font-color:                        $gray;
