--- a/src/main/resources/public/src/scss/portal/portal.scss
+++ b/src/main/resources/public/src/scss/portal/portal.scss
@@ -13,6 +13,7 @@
 @import '../template/_mixins.scss';         // 상속 불가
 @import '../template/_alignments.scss';     // 상속 불가
 @import '../template/_flex.scss';           // 상속 불가
+@import '../template/_columns.scss';        // 상속 불가
 @import '../template/_common.scss';         // 상속 불가
 @import '_variables.scss';
 @import '_mixins.scss';
