--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -803,6 +803,17 @@ input, button, select, optgroup, textarea {
   text-align: center;
 }
 
+.form-container .form-properties .property-group .error-msg {
+  display: none;
+  width: 100%;
+  color: #FF405A;
+  margin: 0.9375rem 0 0.3125rem 0;
+}
+
+.form-container .form-properties .property-group .error-msg.on {
+  display: block;
+}
+
 .form-container .form-properties .property-empty {
   display: none;
 }
@@ -1198,7 +1209,6 @@ label {
   font-family: inherit;
   font-size: 1rem;
   font-weight: 400;
-  line-height: 1.2;
   color: #586872;
   outline: none;
 }
