#9652 [단위 테스트 - 문서양식] 컴포넌트 Custom Code 긴 내용의 텍스트 입력 시, 디자인이 깨진다.

--- a/src/main/resources/public/src/scss/form/_components.scss
+++ b/src/main/resources/public/src/scss/form/_components.scss
@@ -148,10 +148,8 @@
           }
         }
         > button {
-          flex: 1 1 auto;
-          width: 6.875rem; // 110px
           height: 2.5rem; // 40px
-          padding: 0;
+          padding: 0 $element-indent; // 10px
           white-space: nowrap;
           color: $custom-code-btn-font-color;
           border-radius: $element-border-radius;
