#9534 사용자 이름이 길 경우 디자인 깨짐

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -2986,6 +2986,9 @@ button .icon-plus {
 }
 
 .gnb .navigation-config .user-info .user-name {
+  display: inline-block;
+  height: 1.688rem;
+  line-height: 1.688rem;
   color: #929AA6;
   font-weight: 500;
 }
