폼 디자이너 유효성 검증 개선 : 리뷰 후 버그 수정

--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -784,7 +784,7 @@ input, button, select, optgroup, textarea {
 
 .form-container .form-properties .property-group .property-field .property-field-unit {
   position: absolute;
-  top: 50%;
+  top: 2.188rem;
   right: 0.625rem;
   color: #ACB4BF;
 }
