#9643 [단위 테스트 - 게시판] - 댓글 줄바꿈
- 댓글 줄바꿈 처리
- 댓글 수정 영역 디자인 수정

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -6047,13 +6047,14 @@ body.modal-active {
 }
 
 .reply-list .reply-comment {
-  display: flex;
+  word-break: break-all;
   margin-top: 0.9375rem;
   margin-left: 3rem;
 }
 
 .reply-list .reply-comment input {
   width: 100%;
+  margin-right: 0.3125rem;
 }
 
 .reply .profile-photo {
