--- a/src/main/resources/public/template/board/boardArticlesCommentList.html
+++ b/src/main/resources/public/template/board/boardArticlesCommentList.html
@@ -26,7 +26,7 @@
                 </button>
             </div>
         </div>
-        <div class="reply-comment" th:id="${boardComment.boardCommentId}" th:name="${boardComment.boardCommentId}"
+        <div class="reply-comment flex-row" th:id="${boardComment.boardCommentId}" th:name="${boardComment.boardCommentId}"
              th:text="${boardComment.boardCommentContents}"></div>
     </div>
 </body>
