--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -6047,6 +6047,7 @@ body.modal-active {
 }
 
 .reply-list .reply-comment {
+  display: flex;
   word-break: break-all;
   margin-top: 0.9375rem;
   margin-left: 3rem;
@@ -6054,7 +6055,6 @@ body.modal-active {
 
 .reply-list .reply-comment input {
   width: 100%;
-  margin-right: 0.3125rem;
 }
 
 .reply .profile-photo {
