--- a/src/main/resources/public/src/scss/theme/default/_reply.scss
+++ b/src/main/resources/public/src/scss/theme/default/_reply.scss
@@ -40,9 +40,7 @@
                 word-break: break-all;
                 margin-top: 0.9375rem; // 5px
                 margin-left: 3rem; // 48px
-                input {
-                    width: 100%;
-                }
+                input { width: 100%; }
             }
         }
     }
